update all functions to use `type` argument; split getRollCalls into multiple functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(getLegislation)
 export(getLegislationByYear)
 export(getLegislationSigned)
 export(getRCWBills)
-export(getRollCalls)
+export(getRollCalls.summary)
+export(getRollCalls.votes)
+export(getRollCalls.xml)
 export(getSponsors)
 export(getStatusChanges)
