--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,5 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-URL: <https://github.com/rwrandles/washex-r>
-BugReports: <https://github.com/rwrandles/washex-r/issues>
+URL: https://github.com/rwrandles/washex-r
+BugReports: https://github.com/rwrandles/washex-r/issues
