--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: washex
 Title: Washington State Legislative Explorer
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: 
     person(given = "Rohnin",
            family = "Randles",
@@ -18,6 +18,9 @@ Imports:
     dplyr,
     purrr,
     rlang,
+    curl,
+    httr,
+    xml2,
     XML (>= 3.99-0.5)
 Suggests: 
     testthat (>= 3.0.0)
